--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ select:focus {
     transition: all 1s ease-in-out;
 }
 
+.text-box.show {
+    transform: translate(-50%, 0);
+}
+
 .text-box select {
     background-color: darksalmon;
     border: none;
@@ -125,16 +129,21 @@ main {
     /* height: 100%; */
 }
 
+
+/* Media Query */
+
 @media(max-width: 1100px) {
     main {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
 @media(max-width: 760px) {
     main {
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
 @media(max-width: 500px) {
     main {
         grid-template-columns: 1fr;
